lexerParser/src/main/java/fr/femtost/disc/m1comp4/lexerParser/AntlrGenerated/MiniJaJaParser.java
// $ANTLR 3.5.2 MiniJaJa.g 2018-11-05 15:15:22
package fr.femtost.disc.m1comp4.lexerParser.AntlrGenerated;

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class MiniJaJaParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AFFECTATION", "APPELE", "APPELI", 
		"BLOCK", "BOOL", "CALL", "CLASSE", "COMMENT", "CST", "DECLS", "IDENT", 
		"IDF", "ILCOMMENT", "INCREMENT", "INSTRS", "INT", "LISTEXP", "METH", "NBRE", 
		"PARAM", "PRINTS", "RETOUR", "SI", "SOMME", "String", "TAB", "TABLEAU", 
		"TANTQUE", "TYPE", "VAR", "VARS", "VEC", "VIDE", "VOID", "WS", "'!'", 
		"'&&'", "'('", "')'", "'*'", "'+'", "'++'", "'+='", "','", "'-'", "'/'", 
		"';'", "'='", "'=='", "'>'", "'['", "']'", "'class'", "'else'", "'final'", 
		"'if'", "'main'", "'print'", "'return'", "'while'", "'{'", "'||'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int AFFECTATION=4;
	public static final int APPELE=5;
	public static final int APPELI=6;
	public static final int BLOCK=7;
	public static final int BOOL=8;
	public static final int CALL=9;
	public static final int CLASSE=10;
	public static final int COMMENT=11;
	public static final int CST=12;
	public static final int DECLS=13;
	public static final int IDENT=14;
	public static final int IDF=15;
	public static final int ILCOMMENT=16;
	public static final int INCREMENT=17;
	public static final int INSTRS=18;
	public static final int INT=19;
	public static final int LISTEXP=20;
	public static final int METH=21;
	public static final int NBRE=22;
	public static final int PARAM=23;
	public static final int PRINTS=24;
	public static final int RETOUR=25;
	public static final int SI=26;
	public static final int SOMME=27;
	public static final int String=28;
	public static final int TAB=29;
	public static final int TABLEAU=30;
	public static final int TANTQUE=31;
	public static final int TYPE=32;
	public static final int VAR=33;
	public static final int VARS=34;
	public static final int VEC=35;
	public static final int VIDE=36;
	public static final int VOID=37;
	public static final int WS=38;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public MiniJaJaParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public MiniJaJaParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return MiniJaJaParser.tokenNames; }
	@Override public String getGrammarFileName() { return "MiniJaJa.g"; }


	public static class axiom_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "axiom"
	// MiniJaJa.g:44:1: axiom : fichier EOF -> fichier ;
	public final MiniJaJaParser.axiom_return axiom() throws RecognitionException {
		MiniJaJaParser.axiom_return retval = new MiniJaJaParser.axiom_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope fichier1 =null;

		CommonTree EOF2_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_fichier=new RewriteRuleSubtreeStream(adaptor,"rule fichier");

		try {
			// MiniJaJa.g:44:7: ( fichier EOF -> fichier )
			// MiniJaJa.g:44:9: fichier EOF
			{
			pushFollow(FOLLOW_fichier_in_axiom179);
			fichier1=fichier();
			state._fsp--;

			stream_fichier.add(fichier1.getTree());
			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_axiom181);  
			stream_EOF.add(EOF2);

			// AST REWRITE
			// elements: fichier
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 44:20: -> fichier
			{
				adaptor.addChild(root_0, stream_fichier.nextTree());
			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "axiom"


	public static class fichier_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "fichier"
	// MiniJaJa.g:47:1: fichier : ( classe )* ;
	public final MiniJaJaParser.fichier_return fichier() throws RecognitionException {
		MiniJaJaParser.fichier_return retval = new MiniJaJaParser.fichier_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope classe3 =null;


		try {
			// MiniJaJa.g:47:9: ( ( classe )* )
			// MiniJaJa.g:47:11: ( classe )*
			{
			root_0 = (CommonTree)adaptor.nil();


			// MiniJaJa.g:47:11: ( classe )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==56) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// MiniJaJa.g:47:11: classe
					{
					pushFollow(FOLLOW_classe_in_fichier193);
					classe3=classe();
					state._fsp--;

					adaptor.addChild(root_0, classe3.getTree());

					}
					break;

				default :
					break loop1;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "fichier"


	public static class classe_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "classe"
	// MiniJaJa.g:50:1: classe : 'class' ident '{' decls methmain '}' -> ^( CLASSE ident decls methmain ) ;
	public final MiniJaJaParser.classe_return classe() throws RecognitionException {
		MiniJaJaParser.classe_return retval = new MiniJaJaParser.classe_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal4=null;
		Token char_literal6=null;
		Token char_literal9=null;
		ParserRuleReturnScope ident5 =null;
		ParserRuleReturnScope decls7 =null;
		ParserRuleReturnScope methmain8 =null;

		CommonTree string_literal4_tree=null;
		CommonTree char_literal6_tree=null;
		CommonTree char_literal9_tree=null;
		RewriteRuleTokenStream stream_66=new RewriteRuleTokenStream(adaptor,"token 66");
		RewriteRuleTokenStream stream_56=new RewriteRuleTokenStream(adaptor,"token 56");
		RewriteRuleTokenStream stream_64=new RewriteRuleTokenStream(adaptor,"token 64");
		RewriteRuleSubtreeStream stream_methmain=new RewriteRuleSubtreeStream(adaptor,"rule methmain");
		RewriteRuleSubtreeStream stream_ident=new RewriteRuleSubtreeStream(adaptor,"rule ident");
		RewriteRuleSubtreeStream stream_decls=new RewriteRuleSubtreeStream(adaptor,"rule decls");

		try {
			// MiniJaJa.g:50:8: ( 'class' ident '{' decls methmain '}' -> ^( CLASSE ident decls methmain ) )
			// MiniJaJa.g:50:10: 'class' ident '{' decls methmain '}'
			{
			string_literal4=(Token)match(input,56,FOLLOW_56_in_classe204);  
			stream_56.add(string_literal4);

			pushFollow(FOLLOW_ident_in_classe206);
			ident5=ident();
			state._fsp--;

			stream_ident.add(ident5.getTree());
			char_literal6=(Token)match(input,64,FOLLOW_64_in_classe208);  
			stream_64.add(char_literal6);

			pushFollow(FOLLOW_decls_in_classe209);
			decls7=decls();
			state._fsp--;

			stream_decls.add(decls7.getTree());
			pushFollow(FOLLOW_methmain_in_classe211);
			methmain8=methmain();
			state._fsp--;

			stream_methmain.add(methmain8.getTree());
			char_literal9=(Token)match(input,66,FOLLOW_66_in_classe212);  
			stream_66.add(char_literal9);

			// AST REWRITE
			// elements: decls, methmain, ident
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 50:45: -> ^( CLASSE ident decls methmain )
			{
				// MiniJaJa.g:50:48: ^( CLASSE ident decls methmain )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(CLASSE, "CLASSE"), root_1);
				adaptor.addChild(root_1, stream_ident.nextTree());
				adaptor.addChild(root_1, stream_decls.nextTree());
				adaptor.addChild(root_1, stream_methmain.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "classe"


	public static class ident_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "ident"
	// MiniJaJa.g:53:1: ident : IDF -> ^( IDENT IDF ) ;
	public final MiniJaJaParser.ident_return ident() throws RecognitionException {
		MiniJaJaParser.ident_return retval = new MiniJaJaParser.ident_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token IDF10=null;

		CommonTree IDF10_tree=null;
		RewriteRuleTokenStream stream_IDF=new RewriteRuleTokenStream(adaptor,"token IDF");

		try {
			// MiniJaJa.g:53:7: ( IDF -> ^( IDENT IDF ) )
			// MiniJaJa.g:53:9: IDF
			{
			IDF10=(Token)match(input,IDF,FOLLOW_IDF_in_ident233);  
			stream_IDF.add(IDF10);

			// AST REWRITE
			// elements: IDF
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 53:13: -> ^( IDENT IDF )
			{
				// MiniJaJa.g:53:16: ^( IDENT IDF )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(IDENT, "IDENT"), root_1);
				adaptor.addChild(root_1, stream_IDF.nextNode());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "ident"


	public static class decls_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "decls"
	// MiniJaJa.g:56:1: decls : ( decl ';' )* -> ^( DECLS ( decl )* ) ;
	public final MiniJaJaParser.decls_return decls() throws RecognitionException {
		MiniJaJaParser.decls_return retval = new MiniJaJaParser.decls_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal12=null;
		ParserRuleReturnScope decl11 =null;

		CommonTree char_literal12_tree=null;
		RewriteRuleTokenStream stream_50=new RewriteRuleTokenStream(adaptor,"token 50");
		RewriteRuleSubtreeStream stream_decl=new RewriteRuleSubtreeStream(adaptor,"rule decl");

		try {
			// MiniJaJa.g:56:7: ( ( decl ';' )* -> ^( DECLS ( decl )* ) )
			// MiniJaJa.g:56:9: ( decl ';' )*
			{
			// MiniJaJa.g:56:9: ( decl ';' )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==TYPE||LA2_0==VOID||LA2_0==58) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// MiniJaJa.g:56:10: decl ';'
					{
					pushFollow(FOLLOW_decl_in_decls251);
					decl11=decl();
					state._fsp--;

					stream_decl.add(decl11.getTree());
					char_literal12=(Token)match(input,50,FOLLOW_50_in_decls253);  
					stream_50.add(char_literal12);

					}
					break;

				default :
					break loop2;
				}
			}

			// AST REWRITE
			// elements: decl
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 56:21: -> ^( DECLS ( decl )* )
			{
				// MiniJaJa.g:56:24: ^( DECLS ( decl )* )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DECLS, "DECLS"), root_1);
				// MiniJaJa.g:56:32: ( decl )*
				while ( stream_decl.hasNext() ) {
					adaptor.addChild(root_1, stream_decl.nextTree());
				}
				stream_decl.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "decls"


	public static class decl_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "decl"
	// MiniJaJa.g:59:1: decl : ( typemeth ident ( ( vexp -> ^( VAR ident typemeth vexp ) | '[' exp ']' -> ^( TABLEAU ident typemeth exp ) ) | methode -> ^( METH typemeth ident ( methode )? ) ) | finalvar );
	public final MiniJaJaParser.decl_return decl() throws RecognitionException {
		MiniJaJaParser.decl_return retval = new MiniJaJaParser.decl_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal16=null;
		Token char_literal18=null;
		ParserRuleReturnScope typemeth13 =null;
		ParserRuleReturnScope ident14 =null;
		ParserRuleReturnScope vexp15 =null;
		ParserRuleReturnScope exp17 =null;
		ParserRuleReturnScope methode19 =null;
		ParserRuleReturnScope finalvar20 =null;

		CommonTree char_literal16_tree=null;
		CommonTree char_literal18_tree=null;
		RewriteRuleTokenStream stream_55=new RewriteRuleTokenStream(adaptor,"token 55");
		RewriteRuleTokenStream stream_54=new RewriteRuleTokenStream(adaptor,"token 54");
		RewriteRuleSubtreeStream stream_vexp=new RewriteRuleSubtreeStream(adaptor,"rule vexp");
		RewriteRuleSubtreeStream stream_methode=new RewriteRuleSubtreeStream(adaptor,"rule methode");
		RewriteRuleSubtreeStream stream_ident=new RewriteRuleSubtreeStream(adaptor,"rule ident");
		RewriteRuleSubtreeStream stream_exp=new RewriteRuleSubtreeStream(adaptor,"rule exp");
		RewriteRuleSubtreeStream stream_typemeth=new RewriteRuleSubtreeStream(adaptor,"rule typemeth");

		try {
			// MiniJaJa.g:59:6: ( typemeth ident ( ( vexp -> ^( VAR ident typemeth vexp ) | '[' exp ']' -> ^( TABLEAU ident typemeth exp ) ) | methode -> ^( METH typemeth ident ( methode )? ) ) | finalvar )
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==TYPE||LA5_0==VOID) ) {
				alt5=1;
			}
			else if ( (LA5_0==58) ) {
				alt5=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}

			switch (alt5) {
				case 1 :
					// MiniJaJa.g:59:8: typemeth ident ( ( vexp -> ^( VAR ident typemeth vexp ) | '[' exp ']' -> ^( TABLEAU ident typemeth exp ) ) | methode -> ^( METH typemeth ident ( methode )? ) )
					{
					pushFollow(FOLLOW_typemeth_in_decl273);
					typemeth13=typemeth();
					state._fsp--;

					stream_typemeth.add(typemeth13.getTree());
					pushFollow(FOLLOW_ident_in_decl275);
					ident14=ident();
					state._fsp--;

					stream_ident.add(ident14.getTree());
					// MiniJaJa.g:59:23: ( ( vexp -> ^( VAR ident typemeth vexp ) | '[' exp ']' -> ^( TABLEAU ident typemeth exp ) ) | methode -> ^( METH typemeth ident ( methode )? ) )
					int alt4=2;
					int LA4_0 = input.LA(1);
					if ( ((LA4_0 >= 50 && LA4_0 <= 51)||LA4_0==54) ) {
						alt4=1;
					}
					else if ( (LA4_0==41) ) {
						alt4=2;
					}

					else {
						NoViableAltException nvae =
							new NoViableAltException("", 4, 0, input);
						throw nvae;
					}

					switch (alt4) {
						case 1 :
							// MiniJaJa.g:59:24: ( vexp -> ^( VAR ident typemeth vexp ) | '[' exp ']' -> ^( TABLEAU ident typemeth exp ) )
							{
							// MiniJaJa.g:59:24: ( vexp -> ^( VAR ident typemeth vexp ) | '[' exp ']' -> ^( TABLEAU ident typemeth exp ) )
							int alt3=2;
							int LA3_0 = input.LA(1);
							if ( ((LA3_0 >= 50 && LA3_0 <= 51)) ) {
								alt3=1;
							}
							else if ( (LA3_0==54) ) {
								alt3=2;
							}

							else {
								NoViableAltException nvae =
									new NoViableAltException("", 3, 0, input);
								throw nvae;
							}

							switch (alt3) {
								case 1 :
									// MiniJaJa.g:59:25: vexp
									{
									pushFollow(FOLLOW_vexp_in_decl279);
									vexp15=vexp();
									state._fsp--;

									stream_vexp.add(vexp15.getTree());
									// AST REWRITE
									// elements: ident, typemeth, vexp
									// token labels: 
									// rule labels: retval
									// token list labels: 
									// rule list labels: 
									// wildcard labels: 
									retval.tree = root_0;
									RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

									root_0 = (CommonTree)adaptor.nil();
									// 59:30: -> ^( VAR ident typemeth vexp )
									{
										// MiniJaJa.g:59:33: ^( VAR ident typemeth vexp )
										{
										CommonTree root_1 = (CommonTree)adaptor.nil();
										root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(VAR, "VAR"), root_1);
										adaptor.addChild(root_1, stream_ident.nextTree());
										adaptor.addChild(root_1, stream_typemeth.nextTree());
										adaptor.addChild(root_1, stream_vexp.nextTree());
										adaptor.addChild(root_0, root_1);
										}

									}


									retval.tree = root_0;

									}
									break;
								case 2 :
									// MiniJaJa.g:59:62: '[' exp ']'
									{
									char_literal16=(Token)match(input,54,FOLLOW_54_in_decl295);  
									stream_54.add(char_literal16);

									pushFollow(FOLLOW_exp_in_decl297);
									exp17=exp();
									state._fsp--;

									stream_exp.add(exp17.getTree());
									char_literal18=(Token)match(input,55,FOLLOW_55_in_decl299);  
									stream_55.add(char_literal18);

									// AST REWRITE
									// elements: exp, ident, typemeth
									// token labels: 
									// rule labels: retval
									// token list labels: 
									// rule list labels: 
									// wildcard labels: 
									retval.tree = root_0;
									RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

									root_0 = (CommonTree)adaptor.nil();
									// 59:74: -> ^( TABLEAU ident typemeth exp )
									{
										// MiniJaJa.g:59:77: ^( TABLEAU ident typemeth exp )
										{
										CommonTree root_1 = (CommonTree)adaptor.nil();
										root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(TABLEAU, "TABLEAU"), root_1);
										adaptor.addChild(root_1, stream_ident.nextTree());
										adaptor.addChild(root_1, stream_typemeth.nextTree());
										adaptor.addChild(root_1, stream_exp.nextTree());
										adaptor.addChild(root_0, root_1);
										}

									}


									retval.tree = root_0;

									}
									break;

							}

							}
							break;
						case 2 :
							// MiniJaJa.g:59:110: methode
							{
							pushFollow(FOLLOW_methode_in_decl316);
							methode19=methode();
							state._fsp--;

							stream_methode.add(methode19.getTree());
							// AST REWRITE
							// elements: typemeth, methode, ident
							// token labels: 
							// rule labels: retval
							// token list labels: 
							// rule list labels: 
							// wildcard labels: 
							retval.tree = root_0;
							RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

							root_0 = (CommonTree)adaptor.nil();
							// 59:117: -> ^( METH typemeth ident ( methode )? )
							{
								// MiniJaJa.g:59:120: ^( METH typemeth ident ( methode )? )
								{
								CommonTree root_1 = (CommonTree)adaptor.nil();
								root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(METH, "METH"), root_1);
								adaptor.addChild(root_1, stream_typemeth.nextTree());
								adaptor.addChild(root_1, stream_ident.nextTree());
								// MiniJaJa.g:59:143: ( methode )?
								if ( stream_methode.hasNext() ) {
									adaptor.addChild(root_1, stream_methode.nextTree());
								}
								stream_methode.reset();

								adaptor.addChild(root_0, root_1);
								}

							}


							retval.tree = root_0;

							}
							break;

					}

					}
					break;
				case 2 :
					// MiniJaJa.g:59:156: finalvar
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_finalvar_in_decl334);
					finalvar20=finalvar();
					state._fsp--;

					adaptor.addChild(root_0, finalvar20.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "decl"


	public static class varz_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "varz"
	// MiniJaJa.g:62:1: varz : ( vars ';' )* -> ^( VARS ( vars )* ) ;
	public final MiniJaJaParser.varz_return varz() throws RecognitionException {
		MiniJaJaParser.varz_return retval = new MiniJaJaParser.varz_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal22=null;
		ParserRuleReturnScope vars21 =null;

		CommonTree char_literal22_tree=null;
		RewriteRuleTokenStream stream_50=new RewriteRuleTokenStream(adaptor,"token 50");
		RewriteRuleSubtreeStream stream_vars=new RewriteRuleSubtreeStream(adaptor,"rule vars");

		try {
			// MiniJaJa.g:62:7: ( ( vars ';' )* -> ^( VARS ( vars )* ) )
			// MiniJaJa.g:62:10: ( vars ';' )*
			{
			// MiniJaJa.g:62:10: ( vars ';' )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==TYPE||LA6_0==VOID||LA6_0==58) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// MiniJaJa.g:62:11: vars ';'
					{
					pushFollow(FOLLOW_vars_in_varz346);
					vars21=vars();
					state._fsp--;

					stream_vars.add(vars21.getTree());
					char_literal22=(Token)match(input,50,FOLLOW_50_in_varz348);  
					stream_50.add(char_literal22);

					}
					break;

				default :
					break loop6;
				}
			}

			// AST REWRITE
			// elements: vars
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 62:22: -> ^( VARS ( vars )* )
			{
				// MiniJaJa.g:62:25: ^( VARS ( vars )* )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(VARS, "VARS"), root_1);
				// MiniJaJa.g:62:32: ( vars )*
				while ( stream_vars.hasNext() ) {
					adaptor.addChild(root_1, stream_vars.nextTree());
				}
				stream_vars.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);
